--- a/settings.json
+++ b/settings.json
@@ -18,5 +18,9 @@
   },
   "vim_mode": true,
   "autosave": "on_focus_change",
-  "buffer_font_fallbacks": ["LXGW Wenkai Mono"]
+  "buffer_font_fallbacks": ["LXGW Wenkai Mono"],
+  "diagnostics": {
+    // Whether to show warnings or not by default.
+    "include_warnings": true
+  }
 }
